# pepper_emotion

./: Aldebaran 2.5.5.5 documentation.desktop
emotional_system/theatre_bot/: CMakeLists.txt  CMakeLists.txt~  NodeLandmarkLocalization.cpp  README.txt  package.xml  pattern_detection.launch  pattern_detection_outside.launch  positionInfo.txt  theatre_bot_emotion.launch  theatre_bot_keepon_pro.launch  theatre_bot_pepper.launch  theatre_bot_pepper.launch~  theatre_bot_triskar_small.launch  theatre_bot_triskar_small.launch~  theatre_bot_triskar_small_no_emotion_new.launch  theatre_bot_triskar_small_no_emotion_old.launch
emotional_system/theatre_bot/action_description_test/: abstract_action_speak_walk_parallel.json  abstract_action_speak_walk_sequential.json  parallel_action_keepon_test_1.json  sequential_parallel_keepon.json  sequential_same_action.json  simple_action_landmark.json  simple_action_move_torso.json  simple_action_point.json  test_action.json  walk_action_point.json
emotional_system/theatre_bot/action_description_test/Keepon/: keepon_test_1.json  keepon_test_2.json
emotional_system/theatre_bot/action_description_test/TriskarSmall/: emotion_test.json  scene_triskar.json  scene_triskar.json~  scene_triskar_final.json  test_1.json  test_emotinal_torso.json  test_landmark_action.json  test_landmark_action.json~  test_move_oscillate_body.json
emotional_system/theatre_bot/camera_calibration_files/: camera_logitec_c270.yaml  camera_logitec_c270.yaml~  camera_logitec_c270_out_black.yaml  camera_logitec_c270_out_black_old.yaml  camera_logitec_c270_out_blue.yaml  camera_logitec_c270_out_blue.yaml~  camera_logitec_c270_out_blue_old.yaml  lenovo_julian.yaml
emotional_system/theatre_bot/character_description_emotion/: README.txt
emotional_system/theatre_bot/character_description_emotion/character_one/: angry.json  fear.json  happy.json  relaxed.json  sad.json  surprise.json
emotional_system/theatre_bot/character_description_emotion/character_three/: angry.json  content.json  fear.json  happy.json  sad.json
emotional_system/theatre_bot/character_description_emotion/character_two/: angry.json  content.json  fear.json  happy.json  sad.json
emotional_system/theatre_bot/emotion_profile_example/: angry.json  content.json  fear.json  happy.json  sad.json
emotional_system/theatre_bot/emotion_profile_new/: angry.json  angry.json~  happy.json  relaxed.json  sad.json  surprise.json
emotional_system/theatre_bot/emotion_profile_old/: angry.json  angry.json~  content.json  content.json~  happy.json  happy.json~  sad.json  sad.json~
emotional_system/theatre_bot/emotion_profile_pepper/: angry.json  fear.json  happy.json  happy.json~  sad.json  sad.json~
emotional_system/theatre_bot/launch_xml/: action_modulation_nodes.xml  emotion_selection.xml  gui.xml  pattern_detection.xml
emotional_system/theatre_bot/msg/: ActionExecutionMessage.msg  EmotionMessage.msg  EmotionsIntensities.msg  InitParamVelPos.msg  KeeponMessage.msg  MotorMessageTriskar.msg  OdometriesTriskar.msg  OdometryTriskar.msg  PepperInfo.msg  PepperInfo.msg~  PepperMove.msg  PepperMove.msg~  PepperUpper.msg  PepperUpper.msg~  Pose32.msg  TriskarMessage.msg  TriskarMessageEmotion.msg  TriskarMessageEmotion.msg~  TriskarSmallUpper.msg  TriskarVelocity.msg
emotional_system/theatre_bot/nodes/: NodeActionModulation.cpp  NodeActionModulation.h  NodeBodyActionExecution.cpp  NodeBodyActionExecution.cpp~  NodeBodyActionExecution.h  NodeBodyActionExecution.h~  NodeEmotionalModel.cpp  NodeEmotionalModel.h  NodeLandmarkGlobalLocalization.cpp  NodeLandmarkGlobalLocalization.h  NodeLandmarkLocalization (copy).cpp  NodeLandmarkLocalization (copy).h  NodeLandmarkLocalization.cpp  NodeLandmarkLocalization.h  NodeNotDoAnythingActionExecution.cpp  NodeNotDoAnythingActionExecution.h  NodeShoulderActionExecution.cpp  NodeShoulderActionExecution.cpp~  NodeShoulderActionExecution.h  NodeTorsoActionExecution.cpp  NodeTorsoActionExecution.cpp~  NodeTorsoActionExecution.h  NodeTorsoActionExecution.h~  NodeTriskarOdometry.cpp  NodeTriskarOdometry.h  markerInfo.txt  positionInfo.txt
emotional_system/theatre_bot/nodes_platforms/Keepon/: NodeKeepon.cpp  NodeKeepon.h
emotional_system/theatre_bot/nodes_platforms/triskar_small/: FilterOdometryTriskarSmall.cpp  FilterOdometryTriskarSmall.h  NodeOdometryTriskar.cpp  NodeOdometryTriskar.h
emotional_system/theatre_bot/platform_profile/: README.txt
emotional_system/theatre_bot/robot_configuration_files/: README.txt  emotion_processing_parameters.json  kalman_parameters.json  markerInfo.txt  robot_initial_position.json  robot_initial_position.json~  scene_description.json  scene_description.json~  stimuli_system_parameters.json
emotional_system/theatre_bot/src/ActionDecision/: README.txt
emotional_system/theatre_bot/src/ActionDescription/: AbstractActionDescription.cpp  AbstractActionDescription.h  CompositeActionDescription.cpp  CompositeActionDescription.h  README.txt  SimpleActionDescription.cpp  SimpleActionDescription.h
emotional_system/theatre_bot/src/ActionModulation/: ActionAddition.cpp  ActionAddition.h  ActionExecution.cpp  ActionExecution.h  ActionModulation.cpp  ActionModulation.h  ActionModulationSubSystem.cpp  ActionModulationSubSystem.h  MessageType.h
emotional_system/theatre_bot/src/ContextDescription/: AbstractContextDescription.cpp  AbstractContextDescription.h  CompositeContextDescription.cpp  CompositeContextDescription.h  ContextPriority.h  ContextType.h  SimpleContextDescription.cpp  SimpleContextDescription.h
emotional_system/theatre_bot/src/EmotionDescription/: ActionChanges.cpp  ActionChanges.h  EmotionProfile.cpp  EmotionProfile.h  EmotionType.h
emotional_system/theatre_bot/src/EmotionalModel/: EmotionalModel.cpp  EmotionalModel.h  EventAnalyzer.cpp  EventAnalyzer.h  ReactiveModel.cpp  ReactiveModel.h  TypeOfSlope.h  TypeReactiveEvent.h
emotional_system/theatre_bot/src/LoadInformation/: CharacterPaceLoad.cpp  CharacterPaceLoad.h  EmotionalLoad.cpp  EmotionalLoad.h  Load.cpp  Load.h  PlatformLoad.cpp  (+1 more)
emotional_system/theatre_bot/srv/: ActionService.srv
(+144 files in other folders)
